# arithmeticLibrary

./: CMakeLists.txt  main.cpp
src/: Tests.cpp  Tests.h  main.cpp
src/dataStructures/: Structs.cpp  Structs.h  Structs.tpp  linked_list.cpp  linked_list.h  linked_list.tpp  run  structs.cpp  structures.cpp
tmp/: CMakeCache.txt  Makefile  cmake_install.cmake  main  run
